<resources>
    <string name="app_name">MyApp</string>
    <string name="button1">button 1</string>
    <string name="button2">button 2</string>
    <string name="button3">button 3</string>
    <string name="button4">button 4</string>
    <string name="button5">button 5</string>
    <string name="button6">button 6</string>
    <string name="button7">button 7</string>
    <string name="button8">button 8</string>
    <string name="button9">button 9</string>
    <string name="button10">button 10</string>
    <string name="practice">Android practice</string>
    <string name="hello">Hello!</string>
    <string name="signup">Signup</string>
    <string name="login">Login</string>
</resources>